--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -6,7 +6,7 @@
 #    By: mstefano <mstefano@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/05 13:14:15 by mstefano          #+#    #+#              #
-#    Updated: 2024/03/02 19:13:49 by mstefano         ###   ########.fr        #
+#    Updated: 2024/03/11 16:57:00 by mstefano         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -48,7 +48,7 @@ $(NAME) : $(OBJ)
 	@ranlib $(NAME)
 
 %.o : %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	@rm -f $(OBJ)
